--- a/clientes/templates/base.html
+++ b/clientes/templates/base.html
@@ -7,26 +7,46 @@
     <meta charset="UTF-8">
     <title>Clientes</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bases.css' %}">
 </head>
 
 <body>
+    <!-- NavBar -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
 
- <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-    </ul>
-    <button class="btn btn-danger navbar-btn">Button</button>
-  </div>
-</nav> 
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url "base" %}">Base</a>
+            </div>
 
-<div class="container">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url "cliente_listar" %}">Cliente<span class="sr-only">(current)</span></a></li>
+                    <li><a href="{% url "cliente-foto2" %}">contacto</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Action
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="{% url "cliente_crear" %}">cliente crear</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Log In</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+<!-- <div class="container">
 
 <div class="header"><a ref="#"><img src="" alt="Insertar logo" name="Insertar_logo" width="180" height="90" id="Insert_logo" style="background-color: #9F6D40; display:block;" /></a>
     <h1>Clientes: </h1>
@@ -46,18 +66,19 @@
     </ul>
 
     <hr>
-<!-- end .header --></div>
+ end .header </div>
+-->
 
-    <div class="content">
+    <div class="container">
         {% block section %}
         {% endblock section %}
 <!-- end .content --></div>
 
-    <div class="detalle">
+    <div class="container">
         {% block maincontent %}
         {% endblock maincontent %}
 <!-- end .detalle --></div>
-    <div class="footer">
+    <div class="container">
         {% block footer %}
         {% endblock footer %}
 <!-- end .footer --></div>        
