--- a/clientes/templates/base.html
+++ b/clientes/templates/base.html
@@ -6,8 +6,17 @@
 <head lang="es">
     <meta charset="UTF-8">
     <title>Clientes</title>
+
+<!--   
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bases.css' %}">
+-->
+<!-- CDN Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -27,18 +36,18 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url "cliente_listar" %}">Cliente<span class="sr-only">(current)</span></a></li>
-                    <li><a href="{% url "cliente-foto2" %}">contacto</a></li>
+                    <li><a href="{% url "cliente_crear" %}">Cliente Crear<span class="sr-only">(current)</span></a></li>
+                    <li><a href="{% url "cliente_listar" %}">cliente Listar</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Action
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="{% url "cliente_crear" %}">cliente crear</a></li>
+                            <li><a href="{% url "photo_listar" %}">Foto Ver</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Log In</a></li>
+                            <li><a href="{% url "cliente_admin" %}">Log In</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -85,8 +94,9 @@
 
 <!-- end .conteiner --></div>
 
-
+<!--
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+-->
 </body>
 </html>
