--- a/clientes/templates/clientes/photo_form.html
+++ b/clientes/templates/clientes/photo_form.html
@@ -11,6 +11,9 @@
 	{% csrf_token %}
 	{{ form.as_p }}
 	{{ form2.as_p }}
+	<button class="btn btn-primary" type="submit">GUARDAR</button>
+	<a class="btn btn-secondary" href="{% url 'cliente_listar' %}">Cancelar</a>
+</form>
 {% endblock maincontent %}
 
 {% block footer %}
